--- a/README.Rmd
+++ b/README.Rmd
@@ -34,7 +34,11 @@ Objectives: Make it relatively easy in R to do the following:
 
 2.2. Ask John Nash for his preferred substitute for `optim`. Also ask him about supporting an optional `fixPar` vector = NA for `par` to fix and the numeric values for others. This could support easy testing testing of submodels. 
 
-2.3. Ask Jouni Helske and the other `KFAS` and `bssm` contributors about supporting dimnames and an optional `Time` and `dT` component(s)) of an `SSModel` plus a function `asTime` = `Time` component of a model else `as.Posixct(names(y))` else `as.Date(names(y))` else `as.numeric(names(y))` else [`ordered(names(y))` with `dT = `1:length(y)`] with `dT_ = diff(Time)` and `dT = c(dT[1], dT)` and for `bssm` assuming Student's t migrations of `growthRate`.  
+2.3. Ask Jouni Helske and the other `KFAS` and `bssm` contributors about supporting
+(a) dimnames and
+(b) an optional `Time` and `dT` component(s)) of an `SSModel` plus 
+(c) a function `asTime` = `Time` component of a model else `as.Posixct(names(y))` else `as.Date(names(y))` else `as.numeric(names(y))` else [`ordered(names(y))` with `dT = `1:length(y)`] with `dT_ = diff(Time)` and `dT = c(dT[1], dT)` and 
+(d) for `bssm` assuming Student's t migrations of `growthRate`.  
 
 ```{r MadDat1600}
 library(MaddisonData)
